--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -3,12 +3,9 @@ name = "backend"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.13"
 dependencies = [
-    "fastapi[standard]>=0.115.5",
-    "ipython>=8.29.0",
-    "matplotlib>=3.9.2",
+    "fastapi[standard]>=0.115.8",
     "networkx>=3.4.2",
-    "pulp>=2.9.0",
-    "scipy>=1.14.1",
+    "pydantic>=2.10.6",
 ]
