--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,11 +1,10 @@
 [project]
-name = "backend"
+name = "optimal-license-distribution-api"
 version = "0.1.0"
-description = "Add your description here"
-readme = "README.md"
+description = "Optimal License Distribution API"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.115.8",
     "networkx>=3.4.2",
-    "pydantic>=2.10.6",
+    "ruff>=0.9.6",
 ]
