--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = ["ipykernel>=6.29.5", "matplotlib>=3.10.1", "networkx>=3.4.2"]
+dependencies = [
+    "ipykernel>=6.29.5",
+    "matplotlib>=3.10.1",
+    "networkx>=3.4.2",
+    "pyqt6>=6.8.1",
+]
