--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,10 @@ name = "optimal-license-distribution"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.12"
 dependencies = [
-    "ipykernel>=6.29.5",
     "matplotlib>=3.10.1",
+    "mip>=1.15.0",
     "networkx>=3.4.2",
     "pyqt6>=6.8.1",
 ]
