feat: integrate OR-Tools for MIP solver and update main execution flow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "matplotlib>=3.10.1",
     "mip>=1.15.0",
     "networkx>=3.4.2",
+    "ortools>=9.12.4544",
     "pyqt6>=6.8.1",
     "ruff>=0.9.9",
 ]
