Refactor code structure for improved readability and maintainability

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,13 @@
 [project]
-name = "optimal-license-distribution"
+name = "graph-licensing-optimization"
 version = "0.1.0"
-description = "Optimal License Distribution"
+description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.13"
 dependencies = [
     "matplotlib>=3.10.1",
-    "mip>=1.15.0",
     "networkx>=3.4.2",
-    "ortools>=9.12.4544",
-    "pyqt6>=6.8.1",
-    "ruff>=0.9.9",
+    "pulp>=3.1.1",
 ]
 
 [tool.ruff]
