--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,22 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "matplotlib>=3.10.1",
+    "click>=8.1.0",
+    "matplotlib>=3.10.3",
     "networkx>=3.4.2",
-    "pulp>=3.1.1",
+    "numpy>=2.2.6",
+    "pandas>=2.2.3",
+    "pulp>=3.2.1",
     "pytest>=8.3.5",
+    "ruff>=0.11.11",
+    "scipy>=1.15.3",
+    "seaborn>=0.13.2",
+    "tqdm>=4.67.1",
 ]
 
-[tool.ruff]
-line-length = 120
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/graph_licensing"]
