--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "ruff>=0.11.11",
     "scipy>=1.15.3",
     "seaborn>=0.13.2",
+    "tabulate>=0.9.0",
     "tqdm>=4.67.1",
 ]
 
