Add tests for various algorithms and real-world data processing
- Implemented tests for Dominating Set, Naive, and Randomized algorithms.
- Added functionality to extract text from PDF and save it as Markdown.
- Created tests for small graphs and real-world Facebook networks.
- Enhanced comparison tests between different algorithms on generated and real data.
- Included error handling and validation checks in tests.
- Updated dependencies to include PyMuPDF for PDF processing.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "matplotlib>=3.10.3",
     "networkx>=3.5",
     "pulp>=3.2.1",
+    "pymupdf>=1.26.3",
 ]
 
 [dependency-groups]
