--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "imageio>=2.37.0",
     "matplotlib>=3.10.3",
     "networkx>=3.5",
     "pulp>=3.2.1",
