Refactor codebase to use built-in `list` and `dict` types instead of `List` and `Dict` from typing module; update type hints across multiple files for consistency. Improve import organization and remove redundant imports. Enhance file handling with `pathlib` for better path management. Adjust logging messages for clarity and consistency. Update algorithms and solution validation logic for improved performance and readability.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,9 @@ include = ["glopt*"]
 
 [dependency-groups]
 dev = ["black>=25.1.0", "pytest>=8.4.1", "ruff>=0.12.4"]
+
+[tool.ruff]
+select = ["ALL"]
+ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "E501", "E402"]
+line-length = 120
+target-version = "py312"
