Refactor code for improved readability and maintainability
- Updated `pyproject.toml` to enhance Ruff configuration by adding additional ignore rules.
- Refactored method signatures in `ant_colony.py`, `dominating_set.py`, `genetic.py`, `ilp.py`, `randomized.py`, `simulated_annealing.py`, `tabu_search.py`, `tree_dp.py`, and `dynamic_simulator.py` for better readability.
- Improved logging messages in `benchmark.py` and `data_loader.py` for clarity.
- Cleaned up whitespace and formatting in various files to adhere to style guidelines.
- Enhanced validation error messages in `solution_validator.py` for better debugging.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,23 @@ include = ["glopt*"]
 dev = ["black>=25.1.0", "pytest>=8.4.1", "ruff>=0.12.4"]
 
 [tool.ruff]
-select = ["ALL"]
-ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "E501", "E402"]
 line-length = 120
 target-version = "py312"
+
+[tool.ruff.lint]
+select = ["ALL"]
+# Keep existing ignores and explicitly silence known incompatible pydocstyle rules
+# and the COM812 rule which may conflict with the formatter.
+ignore = [
+    "D100",
+    "D101",
+    "D102",
+    "D103",
+    "D104",
+    "D105",
+    "E501",
+    "E402",
+    "D203",
+    "D213",
+    "COM812",
+]
