--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,3 +46,23 @@ ignore = [
     "D213",
     "COM812",
 ]
+
+[tool.ruff.lint.per-file-ignores]
+# Tests: allow asserts, many params, implicit namespace, and loose typing in test function signature.
+"tests/**" = ["S101", "PLR0913", "INP001", "ARG001", "ANN001"]
+# Ant colony algorithm uses PRNG non-cryptographically and helper kwargs patterns.
+"src/glopt/algorithms/ant_colony.py" = ["PLR0913", "ANN401", "D107", "S311", "ARG002"]
+# All algorithms: allow unused kwargs/any and complexity metrics.
+"src/glopt/algorithms/*.py" = ["ANN401", "ARG002", "C901", "PLR0912", "PLR0913", "D107", "S311", "PLR2004", "BLE001"]
+"src/glopt/dynamic_simulator.py" = ["S311", "PLC0415", "ARG004", "PLR2004", "D107"]
+# Visualizer: allow convenience args and local imports, and naive datetime.
+"src/glopt/io/graph_visualizer.py" = ["S311", "D107", "FBT001", "FBT002", "DTZ005", "S101", "PLC0415", "ANN201", "ANN001"]
+
+# Data loader: allow simple numeric comparisons in parsing.
+"src/glopt/io/data_loader.py" = ["PLR2004", "G004", "PLW2901", "C901", "D107", "BLE001"]
+"src/glopt/cli/*.py" = ["ANN201", "ARG001", "ARG005", "FBT001", "C901", "PLR0912", "BLE001", "DTZ005", "SLF001", "PTH118", "PLR0915", "TRY300", "PLR2004", "PLC0415", "PTH123", "N806"]
+"src/glopt/core/mutations.py" = ["S311", "PLR2004", "ARG004", "BLE001"]
+"src/glopt/core/models.py" = ["ANN401"]
+"src/glopt/core/run.py" = ["PLR0913", "BLE001"]
+"src/glopt/core/solution_validator.py" = ["D107", "FBT001", "FBT002"]
+"src/glopt/io/csv_writer.py" = ["D107", "DTZ005"]
