--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,20 @@
 name = "glopt"
 version = "1.0.2"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.11"
 dependencies = [
-    "matplotlib>=3.10.6",
-    "networkx>=3.5",
+    "matplotlib>=3.8",
+    "networkx>=3.3",
     "pulp>=3.2.2",
 ]
+
+[tool.black]
+line-length = 100
+target-version = ["py311"]
+
+[tool.ruff]
+line-length = 100
+target-version = "py311"
+select = ["E", "F", "I", "UP"]
+ignore = []
+fix = true
