--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ dependencies = [
     "matplotlib>=3.8",
     "networkx>=3.3",
     "pulp>=3.2.2",
+    "hypothesis>=6.0",
+    "tqdm>=4.66",
 ]
 
 [tool.black]
