--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "glopt"
 version = "1.0.2"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.13"
 dependencies = [
     "matplotlib>=3.8",
     "networkx>=3.3",
@@ -12,12 +12,14 @@ dependencies = [
 ]
 
 [tool.black]
-line-length = 100
-target-version = ["py311"]
+line-length = 220
+target-version = ["py313"]
 
 [tool.ruff]
-line-length = 100
-target-version = "py311"
+line-length = 220
+target-version = "py313"
+fix = true
+
+[tool.ruff.lint]
 select = ["E", "F", "I", "UP"]
 ignore = []
-fix = true
