--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "tqdm>=4.66",
     "pillow>=10.0",
     "scipy>=1.16.2",
+    "pandas>=2.3.2",
+    "seaborn>=0.13.2",
 ]
 
 [project.optional-dependencies]
