--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "scipy>=1.16.2",
     "pandas>=2.3.2",
     "seaborn>=0.13.2",
+    "pytest>=8.4.2",
 ]
 
 [project.optional-dependencies]
